# CryptoTrace

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CryptoTrace_Implementation_Plan.md  LICENSE  README.md  SECURITY.md  cryptotrace.toml.example  deny.toml  install.ps1  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
Formula/: cryptotrace.rb
benches/: bench.rs
calibration_data/: README.md  model.json  train.csv
docs/: AIR_GAP_GUIDE.md  CONFIGURATION.md  GETTING_STARTED.md  community-providers.json
docs/vscode-extension/: README.md
examples/: 01_simple_detect.rs  02_scan_file.rs  03_batch_folder.rs  04_compare_inputs.rs  05_csv_export.rs  06_recursive_decode.rs  07_sandbox_crash_test.rs  08_confidence_calibration.rs  09_sliding_entropy.rs  10_threat_intel_pipeline.rs  11_ai_narrative.rs  12_siem_export.rs  13_memory_safe_worker.rs  14_compression_bomb_defense.rs  15_signature_mutations.rs  16_provider_round_robin.rs  17_air_gap_import.rs  18_cache_stress_test.rs  19_multi_layer_pipeline.rs  20_false_positive_analysis.rs  21_entropy_vs_encryption.rs  22_custom_detector_plugin.rs  23_fuzz_harness_simulation.rs  24_threat_hunting_dashboard.rs  25_distributed_scan_coordinator.rs
examples/cli/: 01_attack_chain.ps1  01_attack_chain.sh  02_adversarial_evasion.ps1  02_adversarial_evasion.sh  03_context_profiling.ps1  03_context_profiling.sh  04_deep_decode_gauntlet.ps1  04_deep_decode_gauntlet.sh  05_false_positive_benchmark.ps1  05_false_positive_benchmark.sh  06_magic_byte_detect.ps1  06_magic_byte_detect.sh  07_hash_audit.ps1  07_hash_audit.sh  08_config_audit.ps1  08_config_audit.sh  09_payload_diversity.ps1  09_payload_diversity.sh  10_regression_suite.ps1  10_regression_suite.sh
examples/cli/testdata/: 01_deep_7layer_b64.txt  01_deep_b64_of_b64.txt  01_deep_b64_of_hex.txt  01_deep_b64_of_hex_of_b64.txt  01_deep_gzip_b64.txt  01_deep_hex_of_b64.txt  01_deep_hex_of_hex.txt  02_cobaltstrike_config.txt  02_emotet_b64_wrapped.txt  02_meterpreter_hex.txt  02_powershell_encoded.txt  02_ransomnote_b64.txt  03_custom_alphabet_b64.txt  03_double_utf8.txt  README.md  (+20 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: analyze.rs
samples/adversarial/: oversized_detection.txt
samples/compressed/: hello.txt
samples/encodings/: base64.txt  hex.txt
samples/encrypted/: aes_salted.txt
samples/hashes/: md5.txt  sha256.txt
signatures/: cve_map.yaml  default.yaml
src/: cache.rs  cli.rs  error.rs  lib.rs  main.rs  types.rs  update.rs  workers.rs
src/analyzers/: file.rs  mod.rs  recursive.rs  string.rs
src/api/: auth.rs  errors.rs  mod.rs  routes.rs
src/core/: calibration.rs  compression.rs  confidence.rs  encoding.rs  encryption.rs  entropy.rs  hashing.rs  mod.rs  sliding_entropy.rs
src/format/: mod.rs
src/intelligence/: audit.rs  mod.rs  narrative.rs  prompt.rs  risk.rs  siem.rs  threat_intel.rs
src/jobs/: mod.rs
src/providers/: community.rs  mod.rs
src/reports/: html.rs  json.rs  mod.rs  terminal.rs
src/sanitization/: guard.rs  mod.rs  sandbox.rs
src/signatures/: mod.rs
tests/: air_gap_test.rs  api.rs  compression_accuracy.rs  compression_bomb_test.rs  encoding_accuracy.rs  hash_accuracy.rs  memory_stability.rs  proptest.rs  sandbox_crash_test.rs
