[package]
name = "cryptotrace"
version = "0.1.0"
edition = "2024"
description = "Cryptographic Fingerprinting & Data Classification Engine"
license = "Apache-2.0"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / API
axum = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# Cryptography
ring = "0.17"

# Binary parsing
nom = "7"

# Compression
flate2 = "1"
brotli = "7"
xz2 = "0.1"
zstd = "0.13"

# Statistics
statrs = "0.17"

# MIME detection (pure Rust, no libmagic)
tree_magic_mini = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# YAML parsing for signature registries
serde_yaml = "0.9"

# Base64 encoding/decoding
base64 = "0.22"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[[bin]]
name = "cryptotrace"
path = "src/main.rs"

[[bin]]
name = "cryptotrace-worker"
path = "src/bin/worker.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
