[package]
name = "cryptotrace"
version = "0.2.2"
edition = "2024"
description = "Cryptographic Fingerprinting & Data Classification Engine"
license = "Apache-2.0"
homepage = "https://github.com/parv68/CryptoTrace"
repository = "https://github.com/parv68/CryptoTrace"
readme = "README.md"
rust-version = "1.85"
keywords = ["forensics", "cryptography", "detection", "security", "entropy", "encoding"]
categories = ["command-line-utilities", "encoding", "cryptography", "compression"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# Cryptography
ring = "0.17"

# Binary parsing
nom = "7"

# Compression
flate2 = "1"
brotli = "7"
bzip2 = "0.5"
xz2 = "0.1"
zstd = "0.13"

# Statistics
statrs = "0.17"

# MIME detection (pure Rust, no libmagic)
tree_magic_mini = "3"

# Async trait support for AI providers
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# YAML parsing for signature registries
serde_yaml = "0.9"

# Base64 encoding/decoding
base64 = "0.22"

# CSV parsing for calibration datasets
csv = "1"

# Random number generation (synthetic data, etc.)
rand = "0.9"

# LZ4 compression
lz4_flex = "0.11"

# Platform-level sandboxing (seccomp on Linux, sandbox on macOS)
libc = "0.2"

# HTTP client for AI providers
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "cryptotrace"
path = "src/lib.rs"

[[bin]]
name = "cryptotrace"
path = "src/main.rs"

[[bin]]
name = "cryptotrace-worker"
path = "src/bin/worker.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
